--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ html{
 #home::before{
     content:"";
     position: absolute;
-    background:url('../pbg3.jpg')no-repeat center center/cover;
+    background:url('pbg3.jpg')no-repeat center center/cover;
     height: 122%;
     top: 0px;
     left: 0px;
@@ -154,7 +154,7 @@ html{
 #client-section::before{
     content: "";
     position: absolute;
-    background: url(../pbg2.jpg)no-repeat center center/cover;
+    background: url("pbg2.jpg")no-repeat center center/cover;
     /*height: 61%;*/
     height: 100%;
     width: 100%;
@@ -189,7 +189,7 @@ html{
     height:100%;
     z-index: -1;
     opacity: 0.4;
-    background:url("../ask.jpg")no-repeat center center/cover;
+    background:url("ask.jpg")no-repeat center center/cover;
 }
 #contact-box{
     display: flex;
